Missing transcriptUrl for search/byperson

--- a/docs/pi_api.yaml
+++ b/docs/pi_api.yaml
@@ -1380,6 +1380,14 @@ components:
       format: URL
       example: >-
         https://studio.hypercatcher.com/chapters/podcast/http:feed.nashownotes.comrss.xml/episode/http:1322.noagendanotes.com
+    transcriptUrl:
+      description: |
+        Link to the file containing the episode transcript
+
+        Note: in most use cases, the `transcripts` value should be used instead
+      type: string
+      format: URL
+      example: https://mp3s.nashownotes.com/NA-1322-Captions.srt
     transcript:
       description: >
         This tag is used to link to a transcript or closed captions file.
@@ -1464,6 +1472,8 @@ components:
           $ref: '#/components/schemas/language'
         chaptersUrl:
           $ref: '#/components/schemas/chaptersUrl'
+        transcriptUrl:
+          $ref: '#/components/schemas/transcriptUrl'
         transcripts:
           $ref: '#/components/schemas/transcripts'
     items_byperson:
@@ -2034,14 +2044,6 @@ components:
         Link TODO
       type: string
       example: ''
-    transcriptUrl:
-      description: |
-        Link to the file containing the episode transcript
-
-        Note: in most use cases, the `transcripts` value should be used instead
-      type: string
-      format: URL
-      example: https://mp3s.nashownotes.com/NA-1322-Captions.srt
     liveitem_podcast:
       type: object
       properties:
